--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<nav>
 					<ul role="list">
 						<li>
-							<a href="/about">About</a>
+							<a href="about">About</a>
 						</li>
 						<li>...</li>
 						<li>
@@ -136,7 +136,7 @@
 					<nav aria-label="Footer links" id="all-pages">
 						<ul role="list">
 							<li>
-								<a href="/about">About</a>
+								<a href="about">About</a>
 							</li>
 							<li>...</li>
 							<li><pre>WIP</pre></li>
