--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 				<nav>
 					<ul role="list">
 						<li>
-							<a href="/about" data-page-current>About</a>
+							<a href="about" data-page-current>About</a>
 						</li>
 						<li>...</li>
 						<li>
