--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 				<nav>
 					<ul role="list">
 						<li>
-							<a href="about" data-page-current>About</a>
+							<a href="about.html" data-page-current>About</a>
 						</li>
 						<li>...</li>
 						<li>
@@ -89,7 +89,7 @@
 					<nav aria-label="Footer links" id="all-pages">
 						<ul role="list">
 							<li>
-								<a href="/about" data-page-current>About</a>
+								<a href="about.html" data-page-current>About</a>
 							</li>
 							<li>...</li>
 							<li><pre>WIP</pre></li>
