Fix page y margins

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 			class="flex flex-wrap gap-6"
 			style="
 				padding-inline: var(--page-space-x);
-				padding-block-start: var(--page-space-y);
+				margin-block: var(--page-space-y);
 			"
 		>
 			<header style="align-self: flex-start">
