--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-		<title>About — Slava Zakharov</title>
+		<title>About — slaaava</title>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
@@ -20,10 +20,10 @@
 			Stop war in Ukraine!
 		</p>
 		<div
-			class="flex flex-wrap gap-6"
+			class="flex flex-wrap gap-10"
 			style="
 				padding-inline: var(--page-space-x);
-				margin-block: var(--page-space-y);
+				margin-block-start: var(--page-space-y);
 			"
 		>
 			<header style="align-self: flex-start">
@@ -41,20 +41,19 @@
 				</nav>
 			</header>
 
-			<main class="flow" style="min-width: 50%">
+			<main class="flow text-pretty" style="min-width: 50%">
 				<h1>About Me</h1>
 				<p>Hi! I'm Slava Zakharov <em>(he/him)</em>, and I write software.</p>
 				<p>Originally from Saint-Petersburg, I'm currently based in Yerevan.</p>
 				<p>
-					While afk, you can find me running, reading, and bloging. I used to
-					record a
-					<a href="https://deepcuts.ru/podcast">podcast</a>.
+					I spend long hours trail running, enjoy reading, and whish to write
+					more often. I used to record a
+					<a href="https://deepcuts.ru/podcast">podcast</a> (ru).
 				</p>
 				<p>
 					Feel free to
 					<a href="mailto:slava.zakharov@mailbox.org">email</a>
-					me with comments or questions.<br />
-					Alternatively — reach out on
+					me anything. Alternatively — reach out on
 					<a href="https://bsky.app/profile/beaterpetr.bsky.social">bluesky</a>.
 				</p>
 			</main>
@@ -100,7 +99,11 @@
 					<h3>Credits</h3>
 					<p class="text-balance">
 						Source code is licensed under the
-						<a href="https://" style="white-space: pre">0BSD license</a>
+						<a
+							href="https://github.com/petyapetr/slaaava.com/blob/main/LICENSE"
+							style="white-space: pre"
+							>0BSD license</a
+						>
 						<br />
 						All content on this website is distributed under
 						<a
