--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Slava Zakharov</title>
+		<title>slaaava</title>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
@@ -19,14 +19,14 @@
 			Stop war in Ukraine!
 		</p>
 		<div
-			class="flex flex-wrap gap-6"
+			class="flex flex-wrap gap-10"
 			style="
 				padding-inline: var(--page-space-x);
-				margin-block: var(--page-space-y);
+				margin-block-start: var(--page-space-y);
 			"
 		>
 			<header style="align-self: flex-start">
-				<h2 class="text-base mb-1"><a href="/">Slava Zakharov</a></h2>
+				<h2 class="text-base mb-1"><a href="">Slava Zakharov</a></h2>
 				<nav>
 					<ul role="list">
 						<li>
@@ -40,16 +40,16 @@
 				</nav>
 			</header>
 
-			<main class="flow" style="min-width: 50%">
+			<main class="flow text-pretty" style="min-width: 50%">
 				<p>Hi, I'm Slava.</p>
 				<p>
-					Right now I'm building web apps for GIS at
-					<a href="https://geo-vibe.com">geovibe</a>, and learn programming of
-					my own free will.
+					I'm constantly looking for ways to simplify things. This site tells
+					about that journey.
 				</p>
 				<p>
-					I'm constantly looking for ways to simplify things, and this site
-					reflects that journey.
+					Right now I'm building web apps for GIS at
+					<a href="https://geo-vibe.com">geovibe</a>, and hack on stuff of my
+					own free will.
 				</p>
 				<div style="--flow-space: 3em">
 					<div class="flow">
@@ -65,13 +65,14 @@
 						<p>
 							This website is currently under development. As of now, it's a
 							handwritten html served with
-							<a href="https://caddyserver.com">Caddy</a>.
+							<a href="https://caddyserver.com">Caddy</a>, but I'll keep you
+							posted.
 						</p>
 						<p>
 							My own content on this this website is copyright free. No strings
 							attached.
 						</p>
-						<p>This s Site is ad-free and doesn’t use trackers.</p>
+						<p>This site is ad-free and doesn’t use trackers.</p>
 					</div>
 				</div>
 				<div class="mb-16" style="--flow-space: 3em">
@@ -147,7 +148,11 @@
 					<h3>Credits</h3>
 					<p class="text-balance">
 						Source code is licensed under the
-						<a href="https://" style="white-space: pre">0BSD license</a>
+						<a
+							href="https://github.com/petyapetr/slaaava.com/blob/main/LICENSE"
+							style="white-space: pre"
+							>0BSD license</a
+						>
 						<br />
 						All content on this website is distributed under
 						<a
