Add dark mode theme switch

--- a/about.html
+++ b/about.html
@@ -6,6 +6,16 @@
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 		<title>About — slaaava</title>
 		<link rel="stylesheet" href="style.css" />
+		<link
+			rel="stylesheet"
+			href="public/css/light.css"
+			media="(prefers-color-scheme: light)"
+		/>
+		<link
+			rel="stylesheet"
+			href="public/css/dark.css"
+			media="(prefers-color-scheme: dark)"
+		/>
 	</head>
 	<body>
 		<p
@@ -27,7 +37,16 @@
 			"
 		>
 			<header style="align-self: flex-start">
-				<h2 class="text-base mb-1"><a href="/">Slava Zakharov</a></h2>
+				<h2 class="flex justify-between text-base mb-1">
+					<a href="/">Slava Zakharov</a>
+					<button type="button" data-theme-switch aria-hidden="true">
+						<svg aria-hidden="true" viewBox="0 0 32 32">
+							<title>Switch Color Theme</title>
+							<use href="/public/icons.svg#sun"></use>
+							<use href="/public/icons.svg#moon"></use>
+						</svg>
+					</button>
+				</h2>
 				<nav>
 					<ul role="list">
 						<li>
@@ -115,5 +134,6 @@
 				</div>
 			</footer>
 		</div>
+		<script src="main.js"></script>
 	</body>
 </html>
