--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>slaaava</title>
 		<link rel="stylesheet" href="style.css" />
+		<link
+			rel="stylesheet"
+			href="public/css/light.css"
+			media="(prefers-color-scheme: light)"
+		/>
+		<link
+			rel="stylesheet"
+			href="public/css/dark.css"
+			media="(prefers-color-scheme: dark)"
+		/>
 	</head>
 	<body>
 		<p
@@ -26,7 +36,16 @@
 			"
 		>
 			<header style="align-self: flex-start">
-				<h2 class="text-base mb-1"><a href="">Slava Zakharov</a></h2>
+				<h2 class="flex justify-between text-base mb-1">
+					<a href="/">Slava Zakharov</a>
+					<button type="button" data-theme-switch aria-hidden="true">
+						<svg aria-hidden="true" viewBox="0 0 32 32">
+							<title>Switch Color Theme</title>
+							<use href="/public/icons.svg#sun"></use>
+							<use href="/public/icons.svg#moon"></use>
+						</svg>
+					</button>
+				</h2>
 				<nav>
 					<ul role="list">
 						<li>
@@ -65,8 +84,8 @@
 						<p>
 							This website is currently under development. As of now, it's a
 							handwritten html served with
-							<a href="https://caddyserver.com">Caddy</a>, but I'll keep you
-							posted.
+							<a href="https://caddyserver.com">Caddy</a>, but it wouldn't be
+							long til it changes.
 						</p>
 						<p>
 							My own content on this this website is copyright free. No strings
@@ -164,5 +183,6 @@
 				</div>
 			</footer>
 		</div>
+		<script src="main.js"></script>
 	</body>
 </html>
