Fix theme switch

--- a/index.html
+++ b/index.html
@@ -36,11 +36,16 @@
 			"
 		>
 			<header style="align-self: flex-start">
-				<h2 class="flex justify-between text-base mb-1">
+				<h2 class="flex gap-4 text-base mb-1">
 					<a href="/">Slava Zakharov</a>
-					<button type="button" data-theme-switch aria-hidden="true">
+					<button
+						data-theme-switch
+						class="translate-y-px"
+						type="button"
+						aria-hidden="true"
+					>
 						<svg aria-hidden="true" viewBox="0 0 32 32">
-							<title>Switch Color Theme</title>
+							<title aria-hidden="true">Switch Color Theme</title>
 							<use href="/public/icons.svg#sun"></use>
 							<use href="/public/icons.svg#moon"></use>
 						</svg>
