Update cv color theme

--- a/src/pages/cv.html
+++ b/src/pages/cv.html
@@ -21,5 +21,6 @@
 		<hr
 			style="margin-block-start: calc(2 * var(--page-space-y)); margin-block-end: var(--page-space-y);" />
 		<a href="/">Go back</a>
+		<script src="/assets/main.js"></script>
 	</body>
 </html>
