--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -1,16 +1,6 @@
 {% extends "_includes/base.html" %}
 {% set title = "Home" %}
 {% block content %}
-	<p>Hi, I'm Slava.</p>
-	<p>
-		I'm make stuff on the net and constantly look for ways to simplify
-		everything. This site tells about that journey.
-	</p>
-	<p>
-		Right now I'm building web apps for GIS at
-		<a href="https://geo-vibe.com">geovibe</a>, and hack on things of my own
-		free will.
-	</p>
 	<div style="--flow-space: 3em">
 		<div class="flow">
 			<h2
@@ -34,13 +24,12 @@
 			</p>
 			<p>This site is ad-free and doesn’t use trackers.</p>
 			<p>
-				Pages are written in plain html and markdown. Website is built with my
-				own ssg script, and served with
+				Pages are written in plain html and markdown. Website is build with small ssg script, and served with
 				<a href="https://caddyserver.com">Caddy</a>.
 			</p>
 		</div>
 	</div>
-	<div class="mb-16" style="--flow-space: 3em">
+	<div style="--flow-space: 3em">
 		<h2
 			class="mb-8 px-1 pb-1 text-base font-medium"
 			style="color: var(--foreground-3); border-bottom: solid 1px currentColor">
