--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -6,7 +6,14 @@
 			<h2
 				class="mb-8 px-1 pb-1 text-base font-medium"
 				style="color: var(--foreground-3); border-bottom: solid 1px currentColor">
-				Writing
+				<a
+					href="/writing"
+					style="
+    text-decoration: none;
+    color: inherit;
+"
+					>Writing</a
+				>
 			</h2>
 			{% include "_includes/writing.html" %}
 		</div>
@@ -24,7 +31,8 @@
 			</p>
 			<p>This site is ad-free and doesn’t use trackers.</p>
 			<p>
-				Pages are written in plain html and markdown. Website is build with small ssg script, and served with
+				Pages are written in plain html and markdown. Website is build with
+				<a href="/writing/this-website">custom ssg</a> script, and served with
 				<a href="https://caddyserver.com">Caddy</a>.
 			</p>
 		</div>
