--- a/src/pages/post.html
+++ b/src/pages/post.html
@@ -2,7 +2,10 @@
 {% block content %}
 	<h1>{{ title }}</h1>
 	{% if date %}
-		<p class="mb-8">Published at <time>{{ date | formatDate }}</time></p>
+		<div class="mb-8">
+			<aside style="display: inline">Published at</aside>
+			<time>{{ date | formatDate }}</time>
+		</div>
 	{% endif %}
 	{{ content | safe }}
 {% endblock %}
