--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -32,7 +32,7 @@
 			<p>This site is ad-free and doesn’t use trackers.</p>
 			<p>
 				Pages are written in plain html and markdown. Website is build with
-				<a href="/writing/this-website">custom ssg</a> script, and served with
+				<a href="/writing/this-website.html#diy_solution">custom ssg</a> script, and served with
 				<a href="https://caddyserver.com">Caddy</a>.
 			</p>
 		</div>
