--- a/src/pages/post.html
+++ b/src/pages/post.html
@@ -1,10 +1,7 @@
 {% extends "_includes/base.html" %}
 {% block content %}
 	<h1 class="heading" data-anchor="{{ title | tokenizeHeading }}">
-		{{ title }}
-
-		<button type="button" data-anchor="${id}">
-			<svg aria-hidden="true" viewBox="0 0 24 24">
+		{{ title }}<button type="button" data-anchor="${id}"><svg aria-hidden="true" viewBox="0 0 24 24">
 				<title aria-hidden="true">Copy Anchor “{{ title }}”</title>
 				<use href="/assets/icons.svg#link"></use>
 			</svg>
