--- a/src/pages/cv.html
+++ b/src/pages/cv.html
@@ -9,6 +9,7 @@
 		</style>
 	</head>
 	<body
+		class="font-sans"
 		style="
 				padding-inline: var(--page-space-x);
 				margin-block: var(--page-space-y);
