--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -4,7 +4,7 @@
 	<div style="--flow-space: 3em">
 		<div class="flow">
 			<h2
-				class="mb-8 px-1 pb-1 text-base font-medium"
+				class="mb-8 px-1 pb-1 font-serif text-base font-medium"
 				style="color: var(--foreground-3); border-bottom: solid 1px currentColor">
 				<a
 					href="/writing"
@@ -21,7 +21,7 @@
 	<div style="--flow-space: 3em">
 		<div class="flow">
 			<h2
-				class="mb-8 px-1 pb-1 text-base font-medium"
+				class="mb-8 px-1 pb-1 font-serif text-base font-medium"
 				style="color: var(--foreground-3); border-bottom: solid 1px currentColor">
 				Meta
 			</h2>
@@ -31,15 +31,15 @@
 			</p>
 			<p>This site is ad-free and doesn’t use trackers.</p>
 			<p>
-				Pages are written in plain html and markdown. Website is build with
-				<a href="/writing/this-website.html#diy_solution">custom ssg</a> script, and served with
-				<a href="https://caddyserver.com">Caddy</a>.
+				Pages are written in plain html and markdown. Website is built with
+				<a href="/writing/this-website.html#diy_solution">custom ssg</a> script,
+				and served with <a href="https://caddyserver.com">Caddy</a>.
 			</p>
 		</div>
 	</div>
 	<div style="--flow-space: 3em">
 		<h2
-			class="mb-8 px-1 pb-1 text-base font-medium"
+			class="mb-8 px-1 pb-1 font-serif text-base font-medium"
 			style="color: var(--foreground-3); border-bottom: solid 1px currentColor">
 			Get in touch
 		</h2>
